--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,20 @@
 [package]
 name = "leaderpaxos"
 version = "0.1.0"
-authors = ["haraldng"]
+authors = ["Harald Ng <hng@kth.se>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+[features]
+batch_accept = []
+latest_accepted = []
+latest_decide = []
+max_accsync = []
+
+default = ["latest_accepted", "latest_decide", "max_accsync"]
 
 [profile.release]
 lto = true
