--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ batch_accept = []
 latest_accepted = []
 latest_decide = []
 max_accsync = []
+continued_leader_reconfiguration = []
 
 default = ["latest_accepted", "latest_decide", "max_accsync"]
 
