--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ latest_decide = []
 max_accsync = []
 continued_leader_reconfiguration = []
 
-default = ["latest_accepted", "latest_decide", "max_accsync"]
+default = ["latest_accepted", "latest_decide", "max_accsync", "continued_leader_reconfiguration"]
 
 [profile.release]
 lto = true
