--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+[dev-dependencies]
+kompact = { git = "https://github.com/kompics/kompact", rev = "94956af" }
 
 [features]
 batch_accept = []
