--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ edition = "2018"
 kompact = { git = "https://github.com/kompics/kompact", rev = "94956af" }
 serial_test = "0.5.1"
 rand = "0.8.4"
+hocon = "0.5.2"
 
 [features]
 batch_accept = []
