--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+slog = "2.7.0"
+slog-term = "2.8.0"
+slog-async = "2.7.0"
 hocon = "0.5.2"
 
 [dev-dependencies]
