Added garbage collection. Added 1 test for checking.
Signed-off-by: Alexandru-Ionuț Mîndru <alexandru20059@gmail.com>

--- a/tests/config/test.conf
+++ b/tests/config/test.conf
@@ -23,3 +23,13 @@ proposal_test {
     ble_hb_delay: 5
     increment_delay: 2
 }
+
+gc_test {
+    wait_timeout: 2 s
+    num_threads: 8
+    num_nodes: 11
+    ble_hb_delay: 5
+    increment_delay: 2
+    num_proposals: 30
+    gc_idx: 10
+}
