--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ latest_accepted = []
 latest_decide = []
 continued_leader_reconfiguration = []
 
-default = ["latest_accepted", "latest_decide", "continued_leader_reconfiguration"]
+default = ["latest_accepted", "latest_decide", "continued_leader_reconfiguration", "batch_accept"]
 
 [profile.release]
 lto = true
