Split core and runtime into different workspaces

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,31 +1,5 @@
-[package]
-name = "omnipaxos"
-version = "0.1.0"
-authors = ["Harald Ng <hng@kth.se>"]
-edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-slog = "2.7.0"
-slog-term = "2.8.0"
-slog-async = "2.7.0"
-hocon = "0.5.2"
-tokio = { version = "1", features = ["full"] } # TODO don't use full
-
-
-[dev-dependencies]
-kompact = { git = "https://github.com/kompics/kompact", rev = "94956af", features = ["silent_logging"]}
-serial_test = "0.5.1"
-rand = "0.8.4"
-
-[features]
-batch_accept = []
-latest_accepted = []
-latest_decide = []
-continued_leader_reconfiguration = []
-
-default = ["latest_accepted", "latest_decide", "continued_leader_reconfiguration", "batch_accept"]
-
-[profile.release]
-lto = true
+[workspace]
+members = [
+    "core",
+    "runtime"
+]
