--- a/omnipaxos_runtime/Cargo.toml
+++ b/omnipaxos_runtime/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "runtime"
+name = "omnipaxos_runtime"
 version = "0.1.0"
 authors = ["Harald Ng <hng@kth.se>"]
 edition = "2021"
@@ -7,7 +7,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-core = { path = "../core" }
+omnipaxos_core = { path = "../omnipaxos_core" }
 tokio = { version = "1", features = ["full"] } # TODO don't use full
 
 [features]
