Tutorial + small fixes
implement Entry trait for generic type, update tutorial + other fixes: closes #42, closes #37, closes #28

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,9 @@
 [workspace]
 members = [
     "omnipaxos_core",
-    "omnipaxos_runtime"
+    "omnipaxos_runtime",
+    "examples"
 ]
+
+[profile.release]
+lto = true
