--- a/omnipaxos_core/Cargo.toml
+++ b/omnipaxos_core/Cargo.toml
@@ -2,7 +2,7 @@
 name = "omnipaxos_core"
 version = "0.1.0"
 authors = ["Harald Ng <hng@kth.se>"]
-edition = "2021"
+edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -25,5 +25,5 @@ continued_leader_reconfiguration = []
 
 default = ["latest_accepted", "latest_decide", "continued_leader_reconfiguration", "batch_accept"]
 
-[profile.release]
-lto = true
+#[profile.release]
+#lto = true
