--- a/omnipaxos_runtime/Cargo.toml
+++ b/omnipaxos_runtime/Cargo.toml
@@ -2,9 +2,7 @@
 name = "omnipaxos_runtime"
 version = "0.1.0"
 authors = ["Harald Ng <hng@kth.se>"]
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+edition = "2018"
 
 [dependencies]
 omnipaxos_core = { path = "../omnipaxos_core" }
@@ -21,5 +19,5 @@ continued_leader_reconfiguration = []
 
 default = ["latest_accepted", "latest_decide", "continued_leader_reconfiguration", "batch_accept"]
 
-[profile.release]
-lto = true
+#[profile.release]
+#lto = true
