--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "examples"
 version = "0.0.0"
-authors = ["Harald Ng <hng@kth.se>"]
+authors = ["Harald Ng <hng@kth.se>", "Zhanbo Cui <zhanbo@kth.se>"]
 edition = "2018"
 publish = false
 
@@ -9,6 +9,10 @@ publish = false
 omnipaxos_core = { path = "../omnipaxos_core" }
 omnipaxos_runtime = { path = "../omnipaxos_runtime" }
 tokio = { version = "1", features = ["sync", "macros"] }
+bytes = "1"
+structopt = "0.3"
+serde = {version = "1.0", features = ["derive"]}
+serde_json = "1.0"
 
 [[example]]
 name = "core"
