--- a/omnipaxos_runtime/Cargo.toml
+++ b/omnipaxos_runtime/Cargo.toml
@@ -14,10 +14,9 @@ serial_test = "0.5.1"
 [features]
 batch_accept = []
 latest_accepted = []
-latest_decide = []
 continued_leader_reconfiguration = []
 
-default = ["latest_accepted", "latest_decide", "continued_leader_reconfiguration", "batch_accept"]
+default = ["latest_accepted", "continued_leader_reconfiguration", "batch_accept"]
 
 #[profile.release]
 #lto = true
