--- a/omnipaxos_core/Cargo.toml
+++ b/omnipaxos_core/Cargo.toml
@@ -7,10 +7,10 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-slog = "2.7.0"
-slog-term = "2.9.0"
-slog-async = "2.7.0"
-hocon = "0.9.0"
+slog = { version = "2.7.0", optional = true }
+slog-term = { version = "2.9.0", optional = true }
+slog-async = { version = "2.7.0", optional = true }
+hocon = { version = "0.9.0", optional = true }
 
 [dev-dependencies]
 kompact = { git = "https://github.com/kompics/kompact", rev = "94956af", features = ["silent_logging"]}
@@ -22,6 +22,9 @@ batch_accept = []
 latest_accepted = []
 latest_decide = []
 continued_leader_reconfiguration = []
+logging  = [ "slog", "slog-term", "slog-async"]
+hocon_config = [ "hocon" ]
+
 
 default = ["latest_accepted", "latest_decide", "continued_leader_reconfiguration", "batch_accept"]
 
