--- a/omnipaxos_core/Cargo.toml
+++ b/omnipaxos_core/Cargo.toml
@@ -3,7 +3,6 @@ name = "omnipaxos_core"
 version = "0.1.0"
 authors = ["Harald Ng <hng@kth.se>"]
 edition = "2018"
-
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
@@ -11,15 +10,12 @@ slog = { version = "2.7.0", optional = true }
 slog-term = { version = "2.9.0", optional = true }
 slog-async = { version = "2.7.0", optional = true }
 hocon = { version = "0.9.0", optional = true }
-commitlog = { version = "0.1", optional = false }
-rocksdb = { version = "0.18.0", optional = false }
 
 [dev-dependencies]
 kompact = { git = "https://github.com/kompics/kompact", rev = "94956af", features = ["silent_logging"]}
 serial_test = "0.5.1"
 rand = "0.8.4"
-commitlog = "0.1"
-rocksdb = "0.18.0"
+omnipaxos_storage = { path = "../omnipaxos_storage"} 
 
 [features]
 batch_accept = []
