--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -11,6 +11,8 @@ omnipaxos_runtime = { path = "../omnipaxos_runtime" }
 omnipaxos_storage = { path = "../omnipaxos_storage" }
 tokio = { version = "1", features = ["sync", "macros"] }
 rocksdb = "0.18.0"
+zerocopy = "0.6.1"
+
 
 [[example]]
 name = "core"
