--- a/omnipaxos_core/Cargo.toml
+++ b/omnipaxos_core/Cargo.toml
@@ -10,7 +10,7 @@ slog = { version = "2.7.0", optional = true }
 slog-term = { version = "2.9.0", optional = true }
 slog-async = { version = "2.7.0", optional = true }
 hocon = { version = "0.9.0", optional = true }
-zerocopy = "0.6.1"
+zerocopy = "0.6.1" # todo: zerocopy needed for KeyValue struct
 
 # todo: omnipaxos might require omnipaxos_storage in dependencies, but this creates a circular dependency
 
@@ -19,6 +19,7 @@ kompact = { git = "https://github.com/kompics/kompact", rev = "94956af", feature
 serial_test = "0.5.1"
 rand = "0.8.4"
 omnipaxos_storage = { path = "../omnipaxos_storage"} 
+
 
 [features]
 batch_accept = []
