Stable tests before refactor PersistentState

--- a/omnipaxos_storage/Cargo.toml
+++ b/omnipaxos_storage/Cargo.toml
@@ -11,8 +11,8 @@ rocksdb = { version = "0.18.0", optional = false }
 zerocopy = { version = "0.6.1", optional = false }
 
 [dev-dependencies]
-commitlog = "0.1"
-rocksdb = "0.18.0"
+# commitlog = "0.1"
+# rocksdb = "0.18.0"
 
 [features]
 # batch_accept = []
