Refactor memory.rs before PR draft - Refactor get_entries and trim - removed rocksdb memory optimization - updated test_config, work on switching storage type in tests

--- a/omnipaxos_core/tests/config/test.conf
+++ b/omnipaxos_core/tests/config/test.conf
@@ -5,6 +5,7 @@ ble_test {
     ble_hb_delay: 5
     increment_delay: 2
     num_elections: 3
+    storage_type: persistent
 }
 
 consensus_test {
@@ -14,6 +15,7 @@ consensus_test {
     ble_hb_delay: 5
     increment_delay: 2
     num_proposals: 20
+    storage_type: persistent
 }
 
 proposal_test {
@@ -22,6 +24,7 @@ proposal_test {
     num_nodes: 7
     ble_hb_delay: 5
     increment_delay: 2
+    storage_type: persistent
 }
 
 gc_test {
@@ -32,4 +35,5 @@ gc_test {
     increment_delay: 2
     num_proposals: 30
     gc_idx: 10
+    storage_type: persistent
 }
