--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -10,8 +10,8 @@ omnipaxos_core = { path = "../omnipaxos_core" }
 omnipaxos_runtime = { path = "../omnipaxos_runtime" }
 omnipaxos_storage = { path = "../omnipaxos_storage" }
 tokio = { version = "1", features = ["sync", "macros"] }
-rocksdb = "0.18.0"
-zerocopy = "0.6.1"
+zerocopy = { version = "0.6.1", optional = false }
+rocksdb = { version = "0.18.0", optional = false }
 
 [[example]]
 name = "core"
