storage cleanup moved, panic on older storage, new StorageTypeselector struct, ... - Moved storage cleanup to util.rs, add function that cleans commitlog and rocksdb - PersistentStorage checks if storage already exist and panics - New parameter in hocon for memory optimization - New StorageTypeSelector Struct for selecting storage type in test config - trimmed_idx moved to rocks_db storage

--- a/omnipaxos_core/tests/config/test.conf
+++ b/omnipaxos_core/tests/config/test.conf
@@ -6,6 +6,7 @@ ble_test {
     increment_delay: 2
     num_elections: 3
     storage_type: Persistent
+    optimise_storage: Yes
 }
 
 consensus_test {
@@ -16,6 +17,7 @@ consensus_test {
     increment_delay: 2
     num_proposals: 20
     storage_type: Persistent
+    optimise_storage: Yes
 }
 
 proposal_test {
@@ -25,6 +27,7 @@ proposal_test {
     ble_hb_delay: 5
     increment_delay: 2
     storage_type: Persistent
+    optimise_storage: Yes
 }
 
 gc_test {
@@ -36,4 +39,5 @@ gc_test {
     num_proposals: 30
     gc_idx: 10
     storage_type: Persistent
+    optimise_storage: Yes
 }
