serialization/deserialization with bincode, serde and zerocopy - Refactor append_entries to use append_entry - Added wrapper structs for unserializable fields - Removed dependencies in omnipaxos_core - Serialization/deserialization of snapshot and stopsign

--- a/omnipaxos_storage/Cargo.toml
+++ b/omnipaxos_storage/Cargo.toml
@@ -9,6 +9,8 @@ omnipaxos_core = { path = "../omnipaxos_core" }
 commitlog = { version = "0.2.0", optional = false }
 rocksdb = { version = "0.18.0", optional = false }
 zerocopy = { version = "0.6.1", optional = false }
+serde = { version = "1.0", features = ["derive"] }
+bincode = "1.2.1"
 
 [dev-dependencies]
 
