--- a/omnipaxos_core/Cargo.toml
+++ b/omnipaxos_core/Cargo.toml
@@ -10,13 +10,13 @@ slog = { version = "2.7.0", optional = true }
 slog-term = { version = "2.9.0", optional = true }
 slog-async = { version = "2.7.0", optional = true }
 hocon = { version = "0.9.0", optional = true }
-zerocopy = { version = "0.6.1", optional = false }
 
 [dev-dependencies]
 kompact = { git = "https://github.com/kompics/kompact", rev = "94956af", features = ["silent_logging"]}
 serial_test = "0.5.1"
 rand = "0.8.4"
 omnipaxos_storage = { path = "../omnipaxos_storage"} 
+serde = { version = "1.0", features = ["derive"] }
 
 [features]
 batch_accept = []
