Refactor PersistentStorageConfig - added commitlog and rocksDB as dev dependencies - Moved options creation outside persistentStorageConfig, more control for user - Refactor getts and setters for config

--- a/omnipaxos_core/Cargo.toml
+++ b/omnipaxos_core/Cargo.toml
@@ -17,6 +17,8 @@ serial_test = "0.5.1"
 rand = "0.8.4"
 omnipaxos_storage = { path = "../omnipaxos_storage"} 
 serde = { version = "1.0", features = ["derive"] }
+commitlog = { version = "0.2.0", optional = false }
+rocksdb = { version = "0.18.0", optional = false }
 
 [features]
 batch_accept = []
