--- a/omnipaxos_core/tests/config/test.conf
+++ b/omnipaxos_core/tests/config/test.conf
@@ -9,7 +9,7 @@ ble_test {
 }
 
 consensus_test {
-    wait_timeout: 10 s
+    wait_timeout: 5 s
     num_threads: 8
     num_nodes: 3
     ble_hb_delay: 3
@@ -19,19 +19,29 @@ consensus_test {
 }
 
 proposal_test {
-    wait_timeout: 3 s
+    wait_timeout: 10 s
     num_threads: 8
     num_nodes: 7
-    ble_hb_delay: 5
+    ble_hb_delay: 3
     increment_delay: 2
     storage_type: persistent
 }
 
-gc_test {
-    wait_timeout: 3 s
+recovery_test {
+    wait_timeout: 10 s
     num_threads: 8
     num_nodes: 3
-    ble_hb_delay: 5
+    ble_hb_delay: 3
+    increment_delay: 2
+    num_proposals: 20
+    storage_type: persistent
+}
+
+gc_test {
+    wait_timeout: 5 s
+    num_threads: 8
+    num_nodes: 3
+    ble_hb_delay: 3
     increment_delay: 2
     num_proposals: 30
     gc_idx: 10
