restored old values for test.conf, edit comments

--- a/omnipaxos_core/tests/config/test.conf
+++ b/omnipaxos_core/tests/config/test.conf
@@ -9,39 +9,39 @@ ble_test {
 }
 
 consensus_test {
-    wait_timeout: 5 s
+    wait_timeout: 3 s
     num_threads: 8
     num_nodes: 3
-    ble_hb_delay: 3
+    ble_hb_delay: 5
     increment_delay: 2
     num_proposals: 20
     storage_type: persistent
 }
 
 proposal_test {
-    wait_timeout: 10 s
+    wait_timeout: 3 s
     num_threads: 8
     num_nodes: 7
-    ble_hb_delay: 3
+    ble_hb_delay: 5
     increment_delay: 2
     storage_type: persistent
 }
 
 recovery_test {
-    wait_timeout: 10 s
+    wait_timeout: 6 s
     num_threads: 8
     num_nodes: 3
     ble_hb_delay: 3
     increment_delay: 2
     num_proposals: 20
-    storage_type: persistent
+    storage_type: memory
 }
 
 gc_test {
-    wait_timeout: 5 s
+    wait_timeout: 3 s
     num_threads: 8
     num_nodes: 3
-    ble_hb_delay: 3
+    ble_hb_delay: 5
     increment_delay: 2
     num_proposals: 30
     gc_idx: 10
