--- a/omnipaxos_core/tests/config/test.conf
+++ b/omnipaxos_core/tests/config/test.conf
@@ -28,13 +28,13 @@ proposal_test {
 }
 
 recovery_test {
-    wait_timeout: 6 s
+    wait_timeout: 5 s
     num_threads: 8
     num_nodes: 3
     ble_hb_delay: 3
     increment_delay: 2
     num_proposals: 20
-    storage_type: memory
+    storage_type: persistent
 }
 
 gc_test {
