Update test.conf, fix bug in ble_test - Update parameters in test.conf - Fixed bug in ble_test where num_elections was greater than majority of nodes - New constant for  selectingpersistent storage in recovery_testt

--- a/omnipaxos_core/tests/config/test.conf
+++ b/omnipaxos_core/tests/config/test.conf
@@ -4,8 +4,7 @@ ble_test {
     num_nodes: 5
     ble_hb_delay: 5
     increment_delay: 2
-    num_elections: 3
-    storage_type: persistent
+    storage_type: memory
 }
 
 consensus_test {
@@ -34,7 +33,6 @@ recovery_test {
     ble_hb_delay: 3
     increment_delay: 2
     num_proposals: 20
-    storage_type: persistent
 }
 
 gc_test {
