Sequential tests for stable and nightly

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,7 @@ jobs:
       fail-fast: false
       matrix:
         rust: [stable, nightly]
+        max-parallel: 1
     steps:
       - name: Setup rust toolchain
         uses: actions-rs/toolchain@v1
