--- a/omnipaxos_core/Cargo.toml
+++ b/omnipaxos_core/Cargo.toml
@@ -15,8 +15,8 @@ hocon = { version = "0.9.0", optional = true }
 kompact = { git = "https://github.com/kompics/kompact", rev = "94956af", features = ["silent_logging"] }
 omnipaxos_storage = { path = "../omnipaxos_storage", default-features = true } 
 serde = { version = "1.0", features = ["derive"] }
-commitlog = { version = "0.2.0", optional = false }
-sled = { version = "0.34.7", optional = false }
+commitlog = "0.2.0"
+sled = "0.34.7"
 serial_test = "0.5.1"
 rand = "0.8.4"
 
