--- a/omnipaxos_runtime/Cargo.toml
+++ b/omnipaxos_runtime/Cargo.toml
@@ -10,7 +10,7 @@ tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
 
 [dev-dependencies]
 serial_test = "0.5.1"
-omnipaxos_storage = { path = "../omnipaxos_storage"}
+omnipaxos_storage = { path = "../omnipaxos_storage", default-features = true }
 
 
 [features]
