--- a/omnipaxos_core/Cargo.toml
+++ b/omnipaxos_core/Cargo.toml
@@ -17,6 +17,7 @@ omnipaxos_storage = { path = "../omnipaxos_storage", default-features = true }
 serde = { version = "1.0", features = ["derive"] }
 commitlog = "0.2.0"
 sled = "0.34.7"
+tempfile = "3.3.0"
 serial_test = "0.5.1"
 rand = "0.8.4"
 
