Persistent storage for log entries and state (#48)
* Added PersistentStorage struct, work on commitlog and rockdb

* more work on rocksdb

* progress on rocksdb, storage for each paxos replica

* stable omnipaxos_core

* new omnipaxos_storage workspace, moved memorystorage, persistentState

* Getters & Setters for promise, decided and accepted with rocksDB.
- Tests temporarly modified for persistentState
- Finished getters & setters
- Work on FromBytes & Asbytes

* Stable verision with RocksDB working

* adding & getting log entries implemented with CommitLog
- Can add and read log entries from the CommitLog
- Entries returned as Vec<T> instead of array slice
- Updated Sequence_paxos, util and tests to above changes
- Some todo comments

* Commitlog in progress, few bugs left
- Can append & retrive values from commitlog
- Additional todo comments, fix later

* replace memorystorage with persistentstate in core

* Stable tests before refactor PersistentState

* Removed redundant Trait, Structs from memory, refactor code, remove todos

* remove testing, now passing ble, consensus and proposal tests

* work on trim

* All tests passing with commitlog & rocksDB
- Numerous printouts, unclean code. Fix later

* refactor code, comment on printout

* Refactor memory.rs before PR draft
- Refactor get_entries and trim
- removed rocksdb memory optimization
- updated test_config, work on switching storage type in tests

* rustfmt formatting

* rustfmt, StorageType enum, memory optimization
- Added Storagetype Enum for switching between Persistent and Memory
- Optimise rocksDB and commitlog to use less memory
- rustfmt formatting

* Remove printouts, function refactoring

* moved zerocopy dependency, added storageType for consensus test (squash)

* Changes to cargo.toml, test/util.rs, test_config.rs and memory.rs
- Renamed PersistentState to PersistentStorage
- Restore key field in KeyValue struct to String
- Remove st

--- a/omnipaxos_runtime/Cargo.toml
+++ b/omnipaxos_runtime/Cargo.toml
@@ -10,6 +10,8 @@ tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }
 
 [dev-dependencies]
 serial_test = "0.5.1"
+omnipaxos_storage = { path = "../omnipaxos_storage", default-features = true }
+
 
 [features]
 batch_accept = []
