--- a/omnipaxos_core/tests/config/test.conf
+++ b/omnipaxos_core/tests/config/test.conf
@@ -4,7 +4,7 @@ ble_test {
     num_nodes: 5
     ble_hb_delay: 5
     increment_delay: 2
-    num_elections: 3
+    storage_type: memory
 }
 
 consensus_test {
@@ -14,14 +14,25 @@ consensus_test {
     ble_hb_delay: 5
     increment_delay: 2
     num_proposals: 20
+    storage_type: persistent
 }
 
 proposal_test {
-    wait_timeout: 3 s
+    wait_timeout: 5 s
     num_threads: 8
     num_nodes: 7
     ble_hb_delay: 5
     increment_delay: 2
+    storage_type: persistent
+}
+
+recovery_test {
+    wait_timeout: 7 s
+    num_threads: 8
+    num_nodes: 3
+    ble_hb_delay: 3
+    increment_delay: 2
+    num_proposals: 20
 }
 
 gc_test {
@@ -32,4 +43,5 @@ gc_test {
     increment_delay: 2
     num_proposals: 30
     gc_idx: 10
+    storage_type: persistent
 }
