--- a/omnipaxos_core/Cargo.toml
+++ b/omnipaxos_core/Cargo.toml
@@ -13,7 +13,7 @@ slog-async = { version = "2.7.0", optional = true }
 hocon = { version = "0.9.0", optional = true }
 serde = { version = "1.0", features = ["derive"]}
 serde_json = { version = "1.0" }
-preprocessor = { path = "../../preprocessor" }
+preprocessor = { git = "https://github.com/haraldng/preprocessor", rev = "c6ce7aa" }
 
 [dev-dependencies]
 kompact = { git = "https://github.com/kompics/kompact", rev = "94956af", features = ["silent_logging"]}
