--- a/omnipaxos_core/tests/config/test.conf
+++ b/omnipaxos_core/tests/config/test.conf
@@ -10,11 +10,11 @@ ble_test {
 consensus_test {
     wait_timeout: 3 s
     num_threads: 8
-    num_nodes: 3
+    num_nodes: 5
     ble_hb_delay: 5
     increment_delay: 2
-    num_proposals: 20
-    storage_type: persistent
+    num_proposals: 10000
+    storage_type: memory
 }
 
 proposal_test {
@@ -23,7 +23,7 @@ proposal_test {
     num_nodes: 7
     ble_hb_delay: 5
     increment_delay: 2
-    storage_type: persistent
+    storage_type: memory
 }
 
 recovery_test {
@@ -32,7 +32,7 @@ recovery_test {
     num_nodes: 3
     ble_hb_delay: 3
     increment_delay: 2
-    num_proposals: 20
+    num_proposals: 10000
 }
 
 gc_test {
@@ -41,7 +41,7 @@ gc_test {
     num_nodes: 3
     ble_hb_delay: 5
     increment_delay: 2
-    num_proposals: 30
-    gc_idx: 10
-    storage_type: persistent
+    num_proposals: 10000
+    gc_idx: 1000
+    storage_type: memory
 }
