--- a/omnipaxos_core/tests/config/test.conf
+++ b/omnipaxos_core/tests/config/test.conf
@@ -2,7 +2,7 @@ ble_test {
     wait_timeout: 3 s
     num_threads: 8
     num_nodes: 5
-    ble_hb_delay: 5
+    election_timeout_ms: 50
     increment_delay: 2
     storage_type: memory
 }
@@ -11,7 +11,7 @@ consensus_test {
     wait_timeout: 3 s
     num_threads: 8
     num_nodes: 5
-    ble_hb_delay: 5
+    election_timeout_ms: 50
     increment_delay: 2
     num_proposals: 10000
     storage_type: memory
@@ -21,7 +21,7 @@ proposal_test {
     wait_timeout: 5 s
     num_threads: 8
     num_nodes: 7
-    ble_hb_delay: 5
+    election_timeout_ms: 50
     increment_delay: 2
     storage_type: memory
 }
@@ -30,7 +30,7 @@ recovery_test {
     wait_timeout: 7 s
     num_threads: 8
     num_nodes: 3
-    ble_hb_delay: 3
+    election_timeout_ms: 50
     increment_delay: 2
     num_proposals: 10000
 }
@@ -39,7 +39,7 @@ gc_test {
     wait_timeout: 3 s
     num_threads: 8
     num_nodes: 3
-    ble_hb_delay: 5
+    election_timeout_ms: 50
     increment_delay: 2
     num_proposals: 10000
     gc_idx: 1000
