--- a/omnipaxos_core/tests/config/test.conf
+++ b/omnipaxos_core/tests/config/test.conf
@@ -26,6 +26,16 @@ proposal_test {
     storage_type: memory
 }
 
+reconnect_test {
+    wait_timeout: 3 s
+    num_threads: 8
+    num_nodes: 5
+    election_timeout_ms: 50
+    increment_delay: 2
+    num_proposals: 10000
+    storage_type: memory
+}
+
 recovery_test {
     wait_timeout: 7 s
     num_threads: 8
