Add serde to Entry

--- a/examples/kv_store/Cargo.toml
+++ b/examples/kv_store/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 omnipaxos_core = { path = "../../omnipaxos_core" }
 omnipaxos_storage = { path = "../../omnipaxos_storage" }
 tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
+serde = { version = "1.0", features = ["derive"] }
