update PR template, add local CI check and clippy check to CI
Add hocon as default feature

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,3 +69,10 @@ jobs:
         with:
           command: fmt
           args: --all -- --check
+
+  clippy_check:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Run Clippy
+        run: cargo clippy -- -D warnings -W clippy::all
