--- a/omnipaxos_core/Cargo.toml
+++ b/omnipaxos_core/Cargo.toml
@@ -28,7 +28,7 @@ continued_leader_reconfiguration = []
 logging  = [ "slog", "slog-term", "slog-async"]
 hocon_config = [ "hocon" ]
 
-default = ["continued_leader_reconfiguration", "batch_accept"]
+default = ["continued_leader_reconfiguration", "batch_accept", "hocon_config"]
 
 #[profile.release]
 #lto = true
