--- a/omnipaxos_core/Cargo.toml
+++ b/omnipaxos_core/Cargo.toml
@@ -10,7 +10,12 @@ slog = { version = "2.7.0", optional = true }
 slog-term = { version = "2.9.0", optional = true }
 slog-async = { version = "2.7.0", optional = true }
 hocon = { version = "0.9.0", optional = true }
-serde = { version = "1.0", features = ["derive"] }
+
+[dependencies.serde_crate]
+package = "serde"
+optional = true
+version = "1.0"
+features = ["derive"]
 
 [dev-dependencies]
 kompact = { git = "https://github.com/kompics/kompact", rev = "94956af", features = ["silent_logging"] }
@@ -27,6 +32,7 @@ batch_accept = []
 continued_leader_reconfiguration = []
 logging  = [ "slog", "slog-term", "slog-async"]
 hocon_config = [ "hocon" ]
+serde = [ "serde_crate" ]
 
 default = ["continued_leader_reconfiguration", "batch_accept", "hocon_config"]
 
