--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -29,7 +29,7 @@ combine_control_expr = true
 struct_field_align_threshold = 0
 match_arm_blocks = true
 force_multiline_blocks = false
-fn_args_layout = "Tall"
+fn_params_layout = "Tall"
 brace_style = "SameLineWhere"
 control_brace_style = "AlwaysSameLine"
 trailing_semicolon = true
