--- a/omnipaxos_core/Cargo.toml
+++ b/omnipaxos_core/Cargo.toml
@@ -9,14 +9,14 @@ edition = "2018"
 slog = { version = "2.7.0", optional = true }
 slog-term = { version = "2.9.0", optional = true }
 slog-async = { version = "2.7.0", optional = true }
-hocon = { version = "0.9.0", optional = true }
 serde = { version = "1.0", optional = true, features = ["derive"] }
+toml = { version = "0.7.3", optional = true }
 
 [dev-dependencies]
 kompact = { git = "https://github.com/kompics/kompact", rev = "94956af", features = ["silent_logging"] }
 omnipaxos_storage = { path = "../omnipaxos_storage", default-features = true } 
 serde = { version = "1.0", features = ["derive"] }
-#serde_crate = { package = "serde", version = "1.0", features = ["derive"] }
+toml = "0.7.3"
 commitlog = "0.2.0"
 sled = "0.34.7"
 tempfile = "3.3.0"
@@ -26,10 +26,9 @@ rand = "0.8.4"
 [features]
 batch_accept = []
 continued_leader_reconfiguration = []
-logging  = [ "slog", "slog-term", "slog-async"]
-hocon_config = [ "hocon" ]
-
-default = ["continued_leader_reconfiguration", "batch_accept", "hocon_config"]
+logging  = ["slog", "slog-term", "slog-async"]
+toml-config = ["serde", "toml"]
+default = ["continued_leader_reconfiguration", "batch_accept"]
 
 #[profile.release]
 #lto = true
