--- a/omnipaxos_core/Cargo.toml
+++ b/omnipaxos_core/Cargo.toml
@@ -10,17 +10,13 @@ slog = { version = "2.7.0", optional = true }
 slog-term = { version = "2.9.0", optional = true }
 slog-async = { version = "2.7.0", optional = true }
 hocon = { version = "0.9.0", optional = true }
-
-[dependencies.serde_crate]
-package = "serde"
-optional = true
-version = "1.0"
-features = ["derive"]
+serde = { version = "1.0", optional = true, features = ["derive"] }
 
 [dev-dependencies]
 kompact = { git = "https://github.com/kompics/kompact", rev = "94956af", features = ["silent_logging"] }
 omnipaxos_storage = { path = "../omnipaxos_storage", default-features = true } 
 serde = { version = "1.0", features = ["derive"] }
+#serde_crate = { package = "serde", version = "1.0", features = ["derive"] }
 commitlog = "0.2.0"
 sled = "0.34.7"
 tempfile = "3.3.0"
@@ -32,7 +28,6 @@ batch_accept = []
 continued_leader_reconfiguration = []
 logging  = [ "slog", "slog-term", "slog-async"]
 hocon_config = [ "hocon" ]
-serde = [ "serde_crate" ]
 
 default = ["continued_leader_reconfiguration", "batch_accept", "hocon_config"]
 
