--- a/omnipaxos_core/tests/config/node1.toml
+++ b/omnipaxos_core/tests/config/node1.toml
@@ -1,9 +1,9 @@
+# This file is used for tests in /tests/config_test.rs 
 configuration_id = 1
 pid = 1
 peers = [2, 3]
 buffer_size = 100000
-logger_file_path = "/sequencepaxos/logs"
+logger_file_path = "/omnipaxos/logs"
 leader_priority = 2
 skip_prepare_use_leader = { n = 5, priority = 2, pid = 2 }
 initial_leader = { n = 1, priority = 1, pid = 1 }
-logger_path = "/sequencepaxos/logs"
