--- a/omnipaxos_core/tests/config/test.toml
+++ b/omnipaxos_core/tests/config/test.toml
@@ -1,12 +1,12 @@
 [ble_test]
-wait_timeout_sec = 3
+wait_timeout_ms = 3000
 num_threads = 8
 num_nodes = 5
 election_timeout_ms = 50
 storage_type = "Memory"
 
 [consensus_test]
-wait_timeout_sec = 3
+wait_timeout_ms = 3000
 num_threads = 8
 num_nodes = 5
 election_timeout_ms = 50
@@ -14,21 +14,21 @@ num_proposals = 10000
 storage_type = "Memory"
 
 [proposal_test]
-wait_timeout_sec = 5
+wait_timeout_ms = 5000
 num_threads = 8
 num_nodes = 7
 election_timeout_ms = 50
 storage_type = "Memory"
 
 [reconnect_test]
-wait_timeout_sec = 3
+wait_timeout_ms = 3000
 num_threads = 8
 num_nodes = 5
 election_timeout_ms = 50
 storage_type = "Memory"
 
 [recovery_test]
-wait_timeout_sec = 7
+wait_timeout_ms = 7000
 num_threads = 8
 num_nodes = 3
 election_timeout_ms = 50
@@ -36,7 +36,7 @@ num_proposals = 100
 storage_type = "Persistent"
 
 [gc_test]
-wait_timeout_sec = 3
+wait_timeout_ms = 3000
 num_threads = 8
 num_nodes = 3
 election_timeout_ms = 50
