--- a/.github/workflows/push_doc_changes_to_website.yml
+++ b/.github/workflows/push_doc_changes_to_website.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches:
       - master
+    paths-ignore:
+      - '**'
+    if: github.repository == 'haraldng/omnipaxos'
+
   pull_request:
     branches:
       - master
