--- a/omnipaxos_core/tests/config/node1.toml
+++ b/omnipaxos_core/tests/config/node1.toml
@@ -1,4 +1,4 @@
-# This file is used for tests in /tests/config_test.rs 
+# This file is used for testing that fields are deserialized to set values
 configuration_id = 1
 pid = 1
 peers = [2, 3]
