--- a/omnipaxos_core/tests/config/node1.toml
+++ b/omnipaxos_core/tests/config/node1.toml
@@ -2,7 +2,9 @@
 configuration_id = 1
 pid = 1
 peers = [2, 3]
-buffer_size = 100000
+buffer_size = 100001
+election_tick_timeout = 32
+resend_message_tick_timeout = 6343
 logger_file_path = "/omnipaxos/logs"
 leader_priority = 2
 skip_prepare_use_leader = { n = 5, priority = 2, pid = 2 }
