--- a/examples/kv_store/Cargo.toml
+++ b/examples/kv_store/Cargo.toml
@@ -8,5 +8,9 @@ edition = "2021"
 [dependencies]
 omnipaxos_core = { path = "../../omnipaxos_core" }
 omnipaxos_storage = { path = "../../omnipaxos_storage" }
+omnipaxos_macros = { path = "../../omnipaxos_macros", optional = true }
 tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
 serde = { version = "1.0", features = ["derive"] }
+
+[features]
+derive_entry = ["omnipaxos_macros"]
