--- a/omnipaxos_macros/Cargo.toml
+++ b/omnipaxos_macros/Cargo.toml
@@ -11,3 +11,7 @@ proc-macro = true
 [dependencies]
 syn = "1.0"
 quote = "1.0"
+
+[dev-dependencies]
+omnipaxos_core = { path = "../omnipaxos_core" }
+omnipaxos_storage = { path = "../omnipaxos_storage" }
