--- a/omnipaxos_core/Cargo.toml
+++ b/omnipaxos_core/Cargo.toml
@@ -5,6 +5,10 @@ authors = ["Harald Ng <hng@kth.se>"]
 edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[package.metadata.docs.rs]
+all-features = true
+rustdoc-args = ["--cfg", "docsrs"]
+
 [dependencies]
 slog = { version = "2.7.0", optional = true }
 slog-term = { version = "2.9.0", optional = true }
