--- a/omnipaxos_storage/Cargo.toml
+++ b/omnipaxos_storage/Cargo.toml
@@ -4,6 +4,10 @@ version = "0.1.0"
 authors = ["Abyel Tesfay <abyel@kth.se>", "Harald Ng <hng@kth.se>"]
 edition = "2018"
 
+[package.metadata.docs.rs]
+all-features = true
+rustdoc-args = ["--cfg", "docsrs"]
+
 [dependencies]
 omnipaxos_core = { path = "../omnipaxos_core" }
 rocksdb = { version = "0.18.0", optional = true }
@@ -20,3 +24,6 @@ sled = ["dep:sled"]
 rocksdb = ["dep:rocksdb"]
 
 default = ["sled"]
+
+[profile.release]
+lto = true
