--- a/omnipaxos_core/tests/config/test.conf
+++ b/omnipaxos_core/tests/config/test.conf
@@ -2,6 +2,7 @@ ble_test {
     wait_timeout: 3 s
     num_threads: 8
     num_nodes: 5
+    batch_size: 1
     election_timeout_ms: 50
     increment_delay: 2
     storage_type: memory
@@ -11,6 +12,7 @@ consensus_test {
     wait_timeout: 3 s
     num_threads: 8
     num_nodes: 5
+    batch_size: 1
     election_timeout_ms: 50
     increment_delay: 2
     num_proposals: 10000
@@ -21,6 +23,7 @@ proposal_test {
     wait_timeout: 5 s
     num_threads: 8
     num_nodes: 7
+    batch_size: 1
     election_timeout_ms: 50
     increment_delay: 2
     storage_type: memory
@@ -30,6 +33,7 @@ reconnect_test {
     wait_timeout: 3 s
     num_threads: 8
     num_nodes: 5
+    batch_size: 1
     election_timeout_ms: 50
     increment_delay: 2
     num_proposals: 10000
@@ -40,6 +44,7 @@ recovery_test {
     wait_timeout: 7 s
     num_threads: 8
     num_nodes: 3
+    batch_size: 1
     election_timeout_ms: 50
     increment_delay: 2
     num_proposals: 10000
@@ -49,9 +54,22 @@ gc_test {
     wait_timeout: 3 s
     num_threads: 8
     num_nodes: 3
+    batch_size: 1
     election_timeout_ms: 50
     increment_delay: 2
     num_proposals: 10000
+    gc_idx: 1000
+    storage_type: memory
+}
+
+batching_test {
+    wait_timeout: 3 s
+    num_threads: 8
+    num_nodes: 3
+    batch_size: 1
+    election_timeout_ms: 50
+    increment_delay: 2
+    num_proposals: 100
     gc_idx: 1000
     storage_type: memory
 }
