--- a/omnipaxos_core/tests/config/node1.toml
+++ b/omnipaxos_core/tests/config/node1.toml
@@ -7,5 +7,5 @@ election_tick_timeout = 32
 resend_message_tick_timeout = 6343
 logger_file_path = "/omnipaxos/logs"
 leader_priority = 2
-skip_prepare_use_leader = { n = 5, priority = 2, pid = 2 }
-initial_leader = { n = 1, priority = 1, pid = 1 }
+skip_prepare_use_leader = { config_id = 3, n = 5, priority = 2, pid = 2 }
+initial_leader = { config_id = 3, n = 1, priority = 1, pid = 1 }
