--- a/omnipaxos_core/tests/config/test.toml
+++ b/omnipaxos_core/tests/config/test.toml
@@ -44,3 +44,13 @@ num_proposals = 10000
 gc_idx = 1000
 storage_type = "Memory"
 
+[batching_test]
+wait_timeout_ms = 3000
+num_threads= 8
+num_nodes= 3
+batch_size= 31
+election_timeout_ms= 50
+increment_delay= 2
+num_proposals= 310
+gc_idx= 1000
+storage_type= "Memory"
