--- a/omnipaxos_core/Cargo.toml
+++ b/omnipaxos_core/Cargo.toml
@@ -15,6 +15,7 @@ slog-term = { version = "2.9.0", optional = true }
 slog-async = { version = "2.7.0", optional = true }
 serde = { version = "1.0", optional = true, features = ["derive"] }
 toml = { version = "0.7.3", optional = true }
+omnipaxos_macros = { path = "../omnipaxos_macros", optional = true }
 
 [dev-dependencies]
 kompact = { git = "https://github.com/kompics/kompact", rev = "94956af", features = ["silent_logging"] }
@@ -33,6 +34,7 @@ continued_leader_reconfiguration = []
 logging  = ["slog", "slog-term", "slog-async"]
 toml_config = ["serde", "toml"]
 default = ["continued_leader_reconfiguration", "batch_accept"]
+macros = ["omnipaxos_macros"]
 
 [profile.release]
 lto = true
