--- a/examples/kv_store/Cargo.toml
+++ b/examples/kv_store/Cargo.toml
@@ -6,7 +6,10 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-omnipaxos_core = { path = "../../omnipaxos_core" }
+omnipaxos_core = { path = "../../omnipaxos_core", features = ["macros"] }
 omnipaxos_storage = { path = "../../omnipaxos_storage" }
 tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
 serde = { version = "1.0", features = ["derive"] }
+
+[features]
+derive_entry = []
