--- a/.github/workflows/push_doc_changes_to_website.yml
+++ b/.github/workflows/push_doc_changes_to_website.yml
@@ -4,9 +4,6 @@ on:
   push:
     branches:
       - master
-    paths-ignore:
-      - '**'
-    if: github.repository == 'haraldng/omnipaxos'
 
   pull_request:
     branches:
@@ -14,8 +11,9 @@ on:
     types: [opened, reopened, synchronize]
 
 jobs:
-  dispatch:
+  doc_dispatch:
     runs-on: ubuntu-latest
+    if: github.repository == 'haraldng/omnipaxos'
     steps:
       - name: Set SSH key
         run: echo "$SSH_DEPLOY_KEY" > ssh_deploy_key.pem
