Fixed doc sync jobs trigger (#87)
* fixed: doc sync stigger only set to haraldng/omnipaxos

* fixed: set doc sync jobs trigger to omnipaxos repo

* deleted: doc sync trigger of PR

--- a/.github/workflows/push_doc_changes_to_website.yml
+++ b/.github/workflows/push_doc_changes_to_website.yml
@@ -4,18 +4,11 @@ on:
   push:
     branches:
       - master
-    paths-ignore:
-      - '**'
-    if: github.repository == 'haraldng/omnipaxos'
-
-  pull_request:
-    branches:
-      - master
-    types: [opened, reopened, synchronize]
 
 jobs:
-  dispatch:
+  doc_dispatch:
     runs-on: ubuntu-latest
+    if: github.repository == 'haraldng/omnipaxos'
     steps:
       - name: Set SSH key
         run: echo "$SSH_DEPLOY_KEY" > ssh_deploy_key.pem
