--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [workspace]
 members = [
-    "omnipaxos_core",
+    "omnipaxos",
     "omnipaxos_storage",
     "omnipaxos_macros",
     "examples/kv_store"
