--- a/omnipaxos_macros/Cargo.toml
+++ b/omnipaxos_macros/Cargo.toml
@@ -1,7 +1,13 @@
 [package]
 name = "omnipaxos_macros"
 version = "0.1.0"
+authors = ["Harald Ng <hng@kth.se>"]
 edition = "2021"
+description = "Macros for OmniPaxos."
+readme = "README.md"
+license = "Apache-2.0"
+repository = "https://github.com/haraldng/omnipaxos"
+homepage = "https://omnipaxos.com/"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
