--- a/omnipaxos_storage/Cargo.toml
+++ b/omnipaxos_storage/Cargo.toml
@@ -1,8 +1,13 @@
 [package]
 name = "omnipaxos_storage"
 version = "0.1.0"
-authors = ["Abyel Tesfay <abyel@kth.se>", "Harald Ng <hng@kth.se>"]
-edition = "2018"
+authors = ["Harald Ng <hng@kth.se>"]
+edition = "2021"
+description = "Storage implementations for OmniPaxos."
+readme = "README.md"
+license = "Apache-2.0"
+repository = "https://github.com/haraldng/omnipaxos"
+homepage = "https://omnipaxos.com/"
 
 [package.metadata.docs.rs]
 all-features = true
