--- a/omnipaxos/Cargo.toml
+++ b/omnipaxos/Cargo.toml
@@ -19,7 +19,7 @@ slog-term = { version = "2.9.0", optional = true }
 slog-async = { version = "2.7.0", optional = true }
 serde = { version = "1.0", optional = true, features = ["derive"] }
 toml = { version = "0.7.3", optional = true }
-omnipaxos_macros = { version = "0.1.0", path = "../omnipaxos_macros", optional = true }
+omnipaxos_macros = { version = "0.1.1", optional = true }
 
 [dev-dependencies]
 kompact = { git = "https://github.com/kompics/kompact", rev = "94956af", features = ["silent_logging"] }
