--- a/docs/structure.yml
+++ b/docs/structure.yml
@@ -4,9 +4,7 @@ Foreword:
   Getting Started:
     path: "getting-started.md"
   Introduction:
-    path: "introduction/index.md"
-  Project Info:
-    path: "project.md"
+    path: "introduction.md"
 
 OmniPaxos:
   OmniPaxos:
