--- a/omnipaxos_core/tests/config/test.toml
+++ b/omnipaxos_core/tests/config/test.toml
@@ -48,9 +48,10 @@ storage_type = "Memory"
 wait_timeout_ms = 3000
 num_threads= 8
 num_nodes= 3
+# prime number is used to check that proposals are getting decided one batch at a time.
 batch_size= 31
 election_timeout_ms= 50
 increment_delay= 2
 num_proposals= 310
 gc_idx= 1000
-storage_type= "Memory"
+storage_type= "Persistent"
