--- a/examples/tutorial/Cargo.toml
+++ b/examples/tutorial/Cargo.toml
@@ -7,9 +7,11 @@ edition = "2021"
 
 [dependencies]
 omnipaxos = { version = "0.1.0", features = ["batch_accept", "continued_leader_reconfiguration", "toml_config", "serde", "logging"] }
-omnipaxos_storage = { version = "0.1.0" }
+omnipaxos_storage = { version = "0.1.0" , default-features = true }
 tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
 serde = { version = "1.0", features = ["derive"] }
+commitlog = "0.2.0"
+sled = "0.34.7"
 
 [features]
 default = []
