--- a/omnipaxos/tests/config/test.toml
+++ b/omnipaxos/tests/config/test.toml
@@ -17,8 +17,8 @@ storage_type = "Memory"
 wait_timeout_ms = 3000
 num_threads = 8
 num_nodes = 8
-leader_quorum_size = 6
-append_quorum_size = 3
+read_quorum_size = 6
+write_quorum_size = 3
 
 [proposal_test]
 wait_timeout_ms = 5000
