--- a/demo/docker-compose.yml
+++ b/demo/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     environment:
       RUST_BACKTRACE: 1
       PORT_MAPPINGS: "[[8013,8031],[8012,8021],[8023,8032]]"
+      CLIENT_PORTS: "[8001, 8002, 8003]"
     ports:
       - "8012:8012"
       - "8013:8013"
@@ -25,6 +26,7 @@ services:
       - PID=1
       - PEERS=[2,3]
       - PEER_ADDRS=["net:8012","net:8013"]
+      - API_ADDR=net:8001
     depends_on:
       - network-actor
 
@@ -37,6 +39,7 @@ services:
       - PID=2
       - PEERS=[1,3]
       - PEER_ADDRS=["net:8021","net:8023"]
+      - API_ADDR=net:8002
     depends_on:
       - network-actor
 
@@ -49,6 +52,7 @@ services:
       - PID=3
       - PEERS=[1,2]
       - PEER_ADDRS=["net:8031","net:8032"]
+      - API_ADDR=net:8003
     depends_on:
       - network-actor
 
