--- a/demo/network_actor/Cargo.toml
+++ b/demo/network_actor/Cargo.toml
@@ -7,5 +7,7 @@ edition = "2021"
 
 [dependencies]
 lazy_static = "1.4"
-tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "net", "io-util"] }
+tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros", "net", "io-util", "time"] }
 serde_json = "1"
+serde = { version = "1", features = ["derive"] }
+rand = "0.8"
