--- a/omnipaxos/tests/config/node1.toml
+++ b/omnipaxos/tests/config/node1.toml
@@ -1,13 +1,12 @@
 # This file is used for testing that fields are deserialized to set values
 configuration_id = 1
 pid = 1
-peers = [2, 3]
+peers = [2, 3, 4, 5]
 buffer_size = 10000
+logger_file_path = "logs/paxos_1.log"
+leader_priority = 3
+flexible_quorum = { read_quorum_size = 4, write_quorum_size = 2 }
 # If `tick()` is called every 10ms then an election will be triggered every 100ms
 election_tick_timeout = 10
 # If `tick()` is called every 10ms then dropped messages will be resent every 1000ms
 resend_message_tick_timeout = 100
-logger_file_path = "/omnipaxos/logs"
-leader_priority = 2
-skip_prepare_use_leader = { config_id = 3, n = 5, priority = 2, pid = 2 }
-initial_leader = { config_id = 3, n = 1, priority = 1, pid = 1 }
