Make the doc fetch script run on the root path of website

--- a/.github/workflows/push_doc_changes_to_website.yml
+++ b/.github/workflows/push_doc_changes_to_website.yml
@@ -25,5 +25,4 @@ jobs:
 
       - name: Update docs
         run: |
-          cd utils
-          ./fetch_docs_from_omnipaxos.sh
+          bash utils/fetch_docs_from_omnipaxos.sh
