Doc structure checker (#95)
* fixed: doc sync stigger only set to haraldng/omnipaxos

* Added doc structure check script and updated docs

* Update contribution guidelines

* Make doc_structure_checker runnable

* Turned back to js

* Remove changes of CRLF of check.sh

* Add cross-reference checker

* Update docs/contributing/contributing.md

* Update docs/contributing/contributing.md

* Fixed cross-reference in foreword.md

---------

Co-authored-by: Harald Ng <harald.ng@hotmail.com>

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,3 +76,13 @@ jobs:
       - uses: actions/checkout@v3
       - name: Run Clippy
         run: cargo clippy -- -D warnings -W clippy::all
+
+  check_doc_structure:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v3
+      - name: Install dependencies
+        run: npm install js-yaml fs
+      - name: Run Document Structure Check
+        run: node .github/scripts/doc_structure_checker.js
